--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ body
 .fixed
 {
     background-color: azure;
-    border: 11px solid red;
+    border: 11px solid burlywood;
     display: block;
     position: fixed;
     bottom: 0px;
