--- a/index.css
+++ b/index.css
@@ -88,7 +88,7 @@ body
 
 .fixed
 {
-    background-color: azure;
+    background-color: crimson;
     border: 11px solid burlywood;
     display: block;
     position: fixed;
